--- a/source/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
+++ b/source/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
@@ -115,6 +115,8 @@
   <ItemGroup>
     <Compile Include="CommandRegistrySpecs.cs" />
     <Compile Include="FrontControllerSpecs.cs" />
+    <Compile Include="IDepartment.cs" />
+    <Compile Include="IDepartmentProvider.cs" />
     <Compile Include="MessageGeneratorSpecs.cs" />
     <Compile Include="RequestCommandSpecs.cs" />
     <Compile Include="utility\ObjectFactory.cs" />
