--- a/source/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
+++ b/source/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
@@ -117,6 +117,7 @@
     <Compile Include="FrontControllerSpecs.cs" />
     <Compile Include="MessageGeneratorSpecs.cs" />
     <Compile Include="RequestCommandSpecs.cs" />
+    <Compile Include="utility\StubSpec.cs" />
     <Compile Include="utility\ObjectFactory.cs" />
     <Compile Include="ViewDepartmentsOfADepartmentSpecs.cs" />
     <Compile Include="ViewTheMainDepartmentsSpecs.cs" />
