--- a/source/nothinbutdotnetstore/nothinbutdotnetstore.csproj
+++ b/source/nothinbutdotnetstore/nothinbutdotnetstore.csproj
@@ -100,6 +100,8 @@
     <Compile Include="web\core\stubs\StubMissingCommand.cs" />
     <Compile Include="web\core\stubs\StubRequestFactory.cs" />
     <Compile Include="web\core\stubs\StubSetOfCommands.cs" />
+    <Compile Include="web\core\utility\Stub.cs" />
+    <Compile Include="web\core\utility\StubType.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
