--- a/source/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
+++ b/source/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandRegistrySpecs.cs" />
+    <Compile Include="ViewProductsOfADepartmentSpecs.cs" />
     <Compile Include="FrontControllerSpecs.cs" />
     <Compile Include="MessageGeneratorSpecs.cs" />
     <Compile Include="RequestCommandSpecs.cs" />
